--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "mongoose": "^6.0.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.13",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "validator": "^13.6.0"
   }
 }
